Flex-direction, exercicios de introdução

--- a/front_end/css_flexbox/aula_02/index.html
+++ b/front_end/css_flexbox/aula_02/index.html
@@ -4,32 +4,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundamentos - display flex</title>
+    <title>Fundamentos - Flex Direction</title>
     <style>
-        .flex{
-            max-width: 300px;
-            padding: 10px;
-            border: 2px solid #000;
+        .flex-container{
+            margin: 0%;
+            padding: 0%;
             display: flex;
         }
-        .item{
-            background-color: aqua;
+        .flex-item{
+            background: blue;
+            height: 50px;
+            width: 50px;
+            line-height: 50px;
+            font-size: 20px;
+            color: aliceblue;
+            text-align: center;
             margin: 5px;
+        }
+
+        .row-reverse{
+            flex-direction: row-reverse;
+        }
+        .row-reverse li{
+            background: red;
+        }
+        .column{
+            flex-direction: column;
+            float: left;
+        }
+        .column li{
+            flex-direction: column;
+            background: orange;
+        }
+
+        .column-reverse{
+            flex-direction: column-reverse;
+            float: right;
+        }
+        .column-reverse li{
+            background: purple;
         }
     </style>
 
 </head>
 <body>
-    <div class="flex">
-        <div class="item">Item 1</div>
-        <div class="item">Item 2</div>
-        <div class="item">Item 3</div>
-        <div class="item">Item 3</div>
-        <div class="item">Item 3</div>
-        <div class="item">Item 3</div>
-        <div class="item">Item 3</div>
-        <div class="item">Item 3</div>
-        <div class="item">Item 3</div>
-    </div>
+    <ul class="flex-container">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+    </ul>
+    <ul class="flex-container row-reverse">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+    </ul>
+    <ul class="flex-container column">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+    </ul>
+    <ul class="flex-container column-reverse">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+    </ul>
 </body>
 </html>
