inicio do projeto

--- a/entrega_de_projetos/projeto_login_steam/index.html
+++ b/entrega_de_projetos/projeto_login_steam/index.html
@@ -25,39 +25,48 @@
                     <a href="#" class="item-menu-central">Comunidade</a>
                     <a href="#" class="item-menu-central">Sobre</a>
                     <a href="#" class="item-menu-central">Suporte</a>
-                </ul>
+                </ul>               
             </div>
-
-    <section>
-        <div class="container-login">
-            <p>Iniciar Sessão</p>
-            <div class="login-email">Nome de usuário da Steam</div>
-            <a href="#"></a> <!--box login-->
-            <div class="login-senha">Senha</div>
-            <a href="#"></a> <!--box senha-->
-            <div class="botao-iniciar">Iniciar Sessão</div>
-            <a href="#">Esqueceu sua senha?</a>
-        </div>
-    </section>
-    <aside>
-        <p>Cadastre-se no Steam e descubra milhares de jogos para jogar.</p>
-        <a href="#">Saiba Mais</a>
-        <img src="img/logo-pc.png" alt="logo de pc simbolizando para jogar na steam">
-        <p>É gratuíto e fácil de usar.</p>
-        <a href="#">Cadastre-se</a>
-    </aside>
+    <div class="container">
+        <section>
+            <div class="container-login">
+                <h1>Iniciar Sessão</h1>
+                <div class="login-email">Nome de usuário da Steam</div>
+                <div class="box-digitar"></div>
+                <div class="login-senha">Senha</div>
+                <div class="box-digitar"></div>
+                <div class="botao-iniciar">Iniciar Sessão</div>
+                <a href="#" class="esqueceu-senha">Esqueceu a sua senha?</a>
+            </div>
+        </section>
+        <aside>
+            <p>Cadastre-se no Steam<br>e descubra milhares de jogos<br> para jogar.</p>
+            <a href="#" class="saiba-mais">Saiba Mais</a><br>
+            <img src="img/logo-pc.png" alt="logo de pc simbolizando para jogar na steam">
+            <p id="gratuito">É gratuíto e fácil de usar.</p>
+            <a href="#" class="cadastro">Cadastre-se</a>
+        </aside>
+    </div>
     <footer>
-        <div class="imagens">
-            <img src="img/valve-logo.png" alt="logo da valve">
-            <img src="img/steam-logo-rodape.png" alt="logo inferior da steam">
+        <div class="imagens-rodape">
+            <img src="img/valve-logo.png" alt="logo da valve" id="valve">
+            <img src="img/steam-logo-rodape.png" alt="logo inferior da steam" id="steam">
+
         </div>
-        <p>© 2022 Valve Corporation. Todos os direitos reservados. Todas as marcas são propriedade dos seus respectivos donos nos EUA e em outros países.
-            IVA incluso em todos os preços onde aplicável.</p>
-        <a href="#">Politica de Privacidade</a>
-        <a href="#">Termos Legais</a>
-        <a href="#">Acordo de Assinatura</a>
-        <a href="#">Reembolsos</a>
-        <a href="Cookies"></a>
+        <div class="empresa">
+            <p>© 2022 Valve Corporation. Todos os direitos reservados. Todas as marcas são propriedade dos seus respectivos donos nos EUA e em outros países.<br>
+                IVA incluso em todos os preços onde aplicável.
+            <a href="#">Politica de Privacidade </a>
+            |
+            <a href="#">Termos Legais</a>
+            |
+            <a href="#">Acordo de Assinatura</a>
+            |
+            <a href="#">Reembolsos</a>
+            |
+            <a href="Cookies">Cookies</a>
+        </p>
+        </div>
     </footer>
     
 </body>
