Finalização do projeto em responsivo

--- a/entrega_de_projetos/projeto_login_steam/index.html
+++ b/entrega_de_projetos/projeto_login_steam/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
     <header>
-            <div class="menu-lateral">
+            <div class="container-lateral">
                 <ul class="menu-lateral">
                     <a href="#"> Instale o Steam</a>
                     <li class="item-iniciar">iniciar Sessão</li>
                     <p>|</p>
                     <li class="item-menu-lateral">Idioma</li>
                 </ul>
-            </div>  
-    </header>
-            <div class="menu-central">
+            </div> 
+            <div class="container-central">
             <img src="img/steam-logo.png" alt="logo da steam principal" ></img>            
                 <ul class="menu-central">
                     <a href="#" class="item-menu-central">Loja</a>
@@ -27,6 +26,7 @@
                     <a href="#" class="item-menu-central">Suporte</a>
                 </ul>               
             </div>
+        </header>
     <div class="container">
         <section>
             <div class="container-login">
